syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.plugin.authprovider.type";
option java_outer_classname = "UserPropertiesProto";
option optimize_for = SPEED;

package auth_provider;

message UserProperties{
  message StringList{
    repeated string value = 1;
  }
  map<string, StringList> prop = 1;
}
